Comments: Fix z-index of resend button in a reply (#63132)

--- a/client/blocks/comments/form.scss
+++ b/client/blocks/comments/form.scss
@@ -28,7 +28,8 @@
 		}
 
 		&.is-visible {
-			position: static;
+			position: relative;
+			z-index: z-index( 'root', '.comments__form .button:not(.components-button)' );
 			float: right;
 			opacity: 1;
 		}
